sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:3: error: ';' expected but double literal found.
	var ecart:double = getNombreValeurs().0
                                             ^